force-app/main/default/objects/APR_20__c/APR_20__c.object-meta.xml
<CustomObject>
    <label>APR 20</label>
    <nameField>
        <displayFormat>APR-{00000}</displayFormat>
        <label>APR 20 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APR 20</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>