force-app/main/default/objects/APR_20__c/fields/field3__c.field-meta.xml
<CustomField>
    <fullName>field3__c</fullName>
    <label>field3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>