force-app/main/default/objects/APR_20__c/fields/field4_del__c.field-meta.xml
<CustomField>
    <fullName>field4_del__c</fullName>
    <label>field4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>